# local-digital-concierge-agent

./: .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements.txt
src/agents/: orchestrator.py
src/agents/bill-processor/: bill_processor.py  image_preprocessor.py
src/agents/expense-tracker/: expense_tracker.py
src/agents/knowledge-updater/: knowledge_updater.py
src/agents/maintenance-tracker/: maintenance_tracker.py
src/agents/message-drafter/: message_drafter.py
src/agents/scheduler/: scheduler.py
src/agents/service-finder/: service_finder.py
src/database/: db_client.py  migration.py  schema.sql
src/models/: __init__.py
src/prompts/: bill-extraction-prompt.md  issue-classifier-prompt.md  message-draft-prompt.md  summary-prompt.md
src/tools/: backup.py  llm_client.py
src/ui/web-dashboard/: main.py
tests/fixtures/bill-images/: README.txt
tests/fixtures/bill-images-poor/: README.txt
tests/fixtures/expected-extractions/: README.txt
tests/fixtures/non-bill/: README.txt
tests/fixtures/synthetic_bills/: README.txt  generate.py
tests/unit/: test_db.py
