[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-digital-concierge-agent"
version = "0.1.0"
description = "A local-first digital concierge agent for household management"
authors = [
    {name = "Contributor"}
]
dependencies = [
    "python>=3.11",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.2",
    "mypy>=1.8.0",
    "httpx>=0.25.0",
]

[tool.ruff]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
